# gtfs-segments

./: README.md  pyproject.toml
src/gtfs_segments/: __init__.py  feed.py  projection.py  ruler.py  segmentation.py
tests/: test_gtfs_segments.py
