[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfs-segments"
version = "0.1.0"
description = "Segment GTFS shapes into stop-to-stop route segments with loop-aware projection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Liz Obst"},
]
keywords = ["gtfs", "transit", "geospatial", "geopandas", "transportation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.12",
    "shapely>=2.0",
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
viz = ["folium>=0.14"]
dev = ["pytest>=7.0", "folium>=0.14"]

[project.urls]
Homepage = "https://github.com/lizobst/gtfs-segments"
Issues = "https://github.com/lizobst/gtfs-segments/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfs_segments"]
